tests/traci/set_variable/Vehicle/ChangeLane/InvalidLaneId/errors.traci
#Error while connecting: tcpip::Socket::connect() @ connect: Connection refused
Error: Answered with error to command 0xc4: No lane with index '100' on road '1fi'.
